# magnum-bootwin

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  PrimitivesExample.cpp
